fix wrap behavior of text in annotations

--- a/src/renderer/assets/styles/components/annotations.scss
+++ b/src/renderer/assets/styles/components/annotations.scss
@@ -406,6 +406,9 @@
       display: inline-block;
       vertical-align: top;
       margin-top: 5px;
+      word-wrap: break-word;
+      word-break: break-word;
+      white-space: normal;
     }
   
     .annotation_edit {
